Prevent border spillage

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_table.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_table.scss
@@ -9,6 +9,7 @@ table.theme-light{
     color:color(dark-gray);
   }
   tbody{
+    border:none;
     background-color:white;
   }
   tbody tr:nth-child(even){
